--- a/index.html
+++ b/index.html
@@ -21,32 +21,36 @@
   <body>
     <!--Шапка-->
     <header class="page-header container">
-      <!--brand-name-header-->
-      <a href="" class="brandname" lang="en"
-        ><span class="brandname-one">Web</span>Studio</a
-      >
+      <div class="navigation">
+        <!--brand-name-header-->
+        <a href="" class="brandname" lang="en"
+          ><span class="brandname-one">Web</span>Studio</a
+        >
+      </div>
       <!--navigation-->
-      <div class="container">
+      <div class="container navigation">
         <nav>
           <ul class="site-nav list">
-            <li>
+            <li class="nav-item">
               <a href="./index.html" class="link">Студия</a>
             </li>
-            <li><a href="./portfolio.html" class="link">Портфолио</a></li>
-            <li><a href="" class="link">Контакты</a></li>
+            <li class="nav-item">
+              <a href="./portfolio.html" class="link">Портфолио</a>
+            </li>
+            <li class="nav-item"><a href="" class="link">Контакты</a></li>
           </ul>
           <!-- ul>li*2>p+p швидке написання коду-->
         </nav>
       </div>
       <!--Contacts info-->
-      <div class="container">
+      <div class="container navigation">
         <ul class="contacts list">
-          <li>
+          <li class="nav-item">
             <a href="mailto:info@devstudio.com" class="contacts-nav"
               >info@devstudio.com</a
             >
           </li>
-          <li>
+          <li class="nav-item">
             <a href="tel:+380961111111" class="contacts-nav"
               >+38 096 111 11 11</a
             >
@@ -59,7 +63,7 @@
 
     <main>
       <!--Hero-->
-      <section class="hero">
+      <section class="hero container">
         <h1 class="hero-title">
           Эффективные решения <br />
           для вашего бизнеса
@@ -70,30 +74,30 @@
       <!--Чем мы занимаемся-->
       <section class="section">
         <div class="container">
-          <h2 hidden>Чем мы занимаемся</h2>
-          <ul class="list">
-            <li>
+          <h2 class="visually-hidden">Чем мы занимаемся</h2>
+          <ul class="feature-list list">
+            <li class="feature-item">
               <h3 class="section-title">Внимание к деталям</h3>
               <p class="section-content">
                 Идейные соображения, а также начало повседневной работы по
                 формированию позиции.
               </p>
             </li>
-            <li>
+            <li class="feature-item">
               <h3 class="section-title">Пунктуальность</h3>
               <p class="section-content">
                 Задача организации, в особенности же рамки и место обучения
                 кадров влечет за собой.
               </p>
             </li>
-            <li>
+            <li class="feature-item">
               <h3 class="section-title">Планирование</h3>
               <p class="section-content">
                 Равным образом консультация с широким активом в значительной
                 степени обуславливает.
               </p>
             </li>
-            <li>
+            <li class="feature-item">
               <h3 class="section-title">Современные технологии</h3>
               <p class="section-content">
                 Значимость этих проблем настолько очевидна, что реализация
@@ -108,7 +112,7 @@
         <div class="container">
           <h2 class="section-heading">Чем мы занимаемся</h2>
           <ul class="photos list">
-            <li>
+            <li class="photos-item">
               <img
                 src="./img/first-photo.jpg"
                 alt="Работа с кодом"
@@ -116,7 +120,7 @@
                 height="294"
               />
             </li>
-            <li>
+            <li class="photos-item">
               <img
                 src="./img/second-photo.jpg"
                 alt="Работа с дизайном"
@@ -124,10 +128,10 @@
                 height="294"
               />
             </li>
-            <li>
+            <li class="photos-item">
               <img
                 src="./img/third-photo.jpg"
-                alt="Работа с цветом"
+                alt="Работа с дизайном"
                 width="370"
                 height="294"
               />
@@ -140,46 +144,62 @@
       <section class="team-section">
         <div class="container">
           <h2 class="section-heading">Наша команда</h2>
-          <ul class="photos list">
+          <ul class="team list">
             <li class="team-item">
-              <img
-                src="./img/teammate-1.jpg"
-                alt="Дизайнер продукта"
-                width="270"
-                height="260"
-              />
-              <h3 class="section-title">Игорь Демьяненко</h3>
-              <p class="section-content">Product Designer</p>
+              <div class="card-thumb">
+                <img
+                  src="./img/teammate-1.jpg"
+                  alt="Дизайнер продукта"
+                  width="270"
+                  height="260"
+                />
+              </div>
+              <div class="team-footer">
+                <h3 class="section-title">Игорь Демьяненко</h3>
+                <p class="section-content">Product Designer</p>
+              </div>
             </li>
             <li class="team-item">
-              <img
-                src="./img/teammate-2.jpg"
-                alt="Разработчик"
-                width="270"
-                height="260"
-              />
-              <h3 class="section-title">Ольга Репина</h3>
-              <p class="section-content">Frontend Developer</p>
+              <div class="card-thumb">
+                <img
+                  src="./img/teammate-2.jpg"
+                  alt="Разработчик"
+                  width="270"
+                  height="260"
+                />
+              </div>
+              <div class="team-footer">
+                <h3 class="section-title">Ольга Репина</h3>
+                <p class="section-content">Frontend Developer</p>
+              </div>
             </li>
             <li class="team-item">
-              <img
-                src="./img/teammate-3.jpg"
-                alt="Маркетолог"
-                width="270"
-                height="260"
-              />
-              <h3 class="section-title">Николай Тарасов</h3>
-              <p class="section-content">Marketing</p>
+              <div class="card-thumb">
+                <img
+                  src="./img/teammate-3.jpg"
+                  alt="Маркетолог"
+                  width="270"
+                  height="260"
+                />
+              </div>
+              <div class="team-footer">
+                <h3 class="section-title">Николай Тарасов</h3>
+                <p class="section-content">Marketing</p>
+              </div>
             </li>
             <li class="team-item">
-              <img
-                src="./img/teammate-4.jpg"
-                alt="Дизайнер интерфейса"
-                width="270"
-                height="260"
-              />
-              <h3 class="section-title">Михаил Ермаков</h3>
-              <p class="section-content">UI Designer</p>
+              <div class="card-thumb">
+                <img
+                  src="./img/teammate-4.jpg"
+                  alt="Дизайнер интерфейса"
+                  width="270"
+                  height="260"
+                />
+              </div>
+              <div class="team-footer">
+                <h3 class="section-title">Михаил Ермаков</h3>
+                <p class="section-content">UI Designer</p>
+              </div>
             </li>
           </ul>
         </div>
@@ -187,16 +207,16 @@
     </main>
 
     <!--footer-->
-    <footer class="page-footer">
+    <footer class="page-footer container">
       <!--logo-footer-->
-      <div class="container">
+      <div class="footer container">
         <a href="" class="brandname" lang="en"
           ><span class="brandname-one">Web</span
           ><span class="brandname-two">Studio</span></a
         >
         <address>
-          <ul class="list">
-            <li>
+          <ul class="footer-address list">
+            <li class="footer-item">
               <a
                 href="https://goo.gl/maps/2GUoueHVRLLiKJBr9"
                 target="_blank"
@@ -205,12 +225,12 @@
                 >г. Киев, пр-т Леси Украинки, 26</a
               >
             </li>
-            <li>
+            <li class="footer-item">
               <a href="mailto:info@devstudio.com" class="contacts-link"
                 >info@devstudio.com</a
               >
             </li>
-            <li>
+            <li class="footer-item">
               <a href="tel:+380961111111" class="contacts-link"
                 >+38 096 111 11 11</a
               >
