--- a/portfolio.html
+++ b/portfolio.html
@@ -16,44 +16,46 @@
 
   <body>
     <!--Шапка-->
-    <header class="page-header container">
-      <div class="navigation">
-        <!--brand-name-header-->
-        <a href="" class="brandname" lang="en"
-          ><span class="brandname-one">Web</span>Studio</a
-        >
-      </div>
-      <!--navigation-->
-      <div class="container navigation">
-        <nav>
-          <ul class="site-nav list">
+    <div class="header">
+      <header class="page-header container">
+        <div class="navigation">
+          <!--brand-name-header-->
+          <a href="" class="brandname" lang="en"
+            ><span class="brandname-one">Web</span>Studio</a
+          >
+        </div>
+        <!--navigation-->
+        <div class="container navigation">
+          <nav>
+            <ul class="site-nav list">
+              <li class="nav-item">
+                <a href="./index.html" class="link">Студия</a>
+              </li>
+              <li class="nav-item">
+                <a href="./portfolio.html" class="link">Портфолио</a>
+              </li>
+              <li class="nav-item"><a href="" class="link">Контакты</a></li>
+            </ul>
+            <!-- ul>li*2>p+p швидке написання коду-->
+          </nav>
+        </div>
+        <!--Contacts info-->
+        <div class="container navigation">
+          <ul class="contacts list">
             <li class="nav-item">
-              <a href="./index.html" class="link">Студия</a>
+              <a href="mailto:info@devstudio.com" class="contacts-nav"
+                >info@devstudio.com</a
+              >
             </li>
             <li class="nav-item">
-              <a href="./portfolio.html" class="link">Портфолио</a>
+              <a href="tel:+380961111111" class="contacts-nav"
+                >+38 096 111 11 11</a
+              >
             </li>
-            <li class="nav-item"><a href="" class="link">Контакты</a></li>
           </ul>
-          <!-- ul>li*2>p+p швидке написання коду-->
-        </nav>
-      </div>
-      <!--Contacts info-->
-      <div class="container navigation">
-        <ul class="contacts list">
-          <li class="nav-item">
-            <a href="mailto:info@devstudio.com" class="contacts-nav"
-              >info@devstudio.com</a
-            >
-          </li>
-          <li class="nav-item">
-            <a href="tel:+380961111111" class="contacts-nav"
-              >+38 096 111 11 11</a
-            >
-          </li>
-        </ul>
-      </div>
-    </header>
+        </div>
+      </header>
+    </div>
 
     <!--main-->
     <main>
