--- a/index.html
+++ b/index.html
@@ -20,64 +20,59 @@
 
   <body>
     <!--Шапка-->
-    <div class="header container">
-      <header class="page-header container">
-        <div class="navigation">
-          <!--brand-name-header-->
-          <a href="" class="brandname" lang="en"
-            ><span class="brandname-one">Web</span>Studio</a
-          >
-        </div>
+    <header class="header">
+      <div class="header-container container">
+        <a href="" class="brandname" lang="en"
+          ><span class="brandname-one">Web</span>Studio</a
+        >
         <!--navigation-->
-        <div class="container navigation">
-          <nav>
-            <ul class="site-nav list">
-              <li class="nav-item">
-                <a href="./index.html" class="link">Студия</a>
-              </li>
-              <li class="nav-item">
-                <a href="./portfolio.html" class="link">Портфолио</a>
-              </li>
-              <li class="nav-item"><a href="" class="link">Контакты</a></li>
-            </ul>
-            <!-- ul>li*2>p+p швидке написання коду-->
-          </nav>
-        </div>
-        <!--Contacts info-->
-        <div class="container navigation">
-          <ul class="contacts list">
+        <nav class="navigation">
+          <ul class="site-nav">
             <li class="nav-item">
-              <a href="mailto:info@devstudio.com" class="contacts-nav"
-                >info@devstudio.com</a
-              >
+              <a href="./index.html" class="link">Студия</a>
             </li>
             <li class="nav-item">
-              <a href="tel:+380961111111" class="contacts-nav"
-                >+38 096 111 11 11</a
-              >
+              <a href="./portfolio.html" class="link">Портфолио</a>
             </li>
+            <li class="nav-item"><a href="" class="link">Контакты</a></li>
           </ul>
-        </div>
-      </header>
-    </div>
+          <!-- ul>li*2>p+p швидке написання коду-->
+        </nav>
+        <!--Contacts info-->
+        <ul class="contacts">
+          <li class="nav-item">
+            <a href="mailto:info@devstudio.com" class="contacts-nav"
+              >info@devstudio.com</a
+            >
+          </li>
+          <li class="nav-item">
+            <a href="tel:+380961111111" class="contacts-nav"
+              >+38 096 111 11 11</a
+            >
+          </li>
+        </ul>
+      </div>
+    </header>
 
     <!--main-->
 
     <main>
       <!--Hero-->
-      <section class="hero container">
-        <h1 class="hero-title">
-          Эффективные решения <br />
-          для вашего бизнеса
-        </h1>
-        <button type="button" class="hero-button">Заказать услугу</button>
+      <section class="hero">
+        <div class="container">
+          <h1 class="hero-title">
+            Эффективные решения <br />
+            для вашего бизнеса
+          </h1>
+          <button type="button" class="hero-button">Заказать услугу</button>
+        </div>
       </section>
 
       <!--Чем мы занимаемся-->
       <section class="section">
         <div class="container">
           <h2 class="visually-hidden">Чем мы занимаемся</h2>
-          <ul class="feature-list list">
+          <ul class="feature-list">
             <li class="feature-item">
               <h3 class="section-title">Внимание к деталям</h3>
               <p class="section-content">
@@ -110,11 +105,11 @@
         </div>
       </section>
       <!--Чем мы занимаемся(photos)-->
-      <section class="section">
+      <section class="section work-section">
         <div class="container">
           <h2 class="section-heading">Чем мы занимаемся</h2>
-          <ul class="photos list">
-            <li class="photos-item">
+          <ul class="feature-list">
+            <li class="feature-item">
               <img
                 src="./img/first-photo.jpg"
                 alt="Работа с кодом"
@@ -122,7 +117,7 @@
                 height="294"
               />
             </li>
-            <li class="photos-item">
+            <li class="feature-item">
               <img
                 src="./img/second-photo.jpg"
                 alt="Работа с дизайном"
@@ -130,7 +125,7 @@
                 height="294"
               />
             </li>
-            <li class="photos-item">
+            <li class="feature-item">
               <img
                 src="./img/third-photo.jpg"
                 alt="Работа с дизайном"
@@ -143,61 +138,53 @@
       </section>
 
       <!--Наша команда-->
-      <section class="team-section">
+      <section class="team-section section">
         <div class="container">
           <h2 class="section-heading">Наша команда</h2>
-          <ul class="team list">
+          <ul class="team">
             <li class="team-item">
-              <div class="card-thumb">
-                <img
-                  src="./img/teammate-1.jpg"
-                  alt="Дизайнер продукта"
-                  width="270"
-                  height="260"
-                />
-              </div>
+              <img
+                src="./img/teammate-1.jpg"
+                alt="Дизайнер продукта"
+                width="270"
+                height="260"
+              />
               <div class="team-footer">
                 <h3 class="section-title">Игорь Демьяненко</h3>
                 <p class="section-content">Product Designer</p>
               </div>
             </li>
             <li class="team-item">
-              <div class="card-thumb">
-                <img
-                  src="./img/teammate-2.jpg"
-                  alt="Разработчик"
-                  width="270"
-                  height="260"
-                />
-              </div>
+              <img
+                src="./img/teammate-2.jpg"
+                alt="Разработчик"
+                width="270"
+                height="260"
+              />
               <div class="team-footer">
                 <h3 class="section-title">Ольга Репина</h3>
                 <p class="section-content">Frontend Developer</p>
               </div>
             </li>
             <li class="team-item">
-              <div class="card-thumb">
-                <img
-                  src="./img/teammate-3.jpg"
-                  alt="Маркетолог"
-                  width="270"
-                  height="260"
-                />
-              </div>
+              <img
+                src="./img/teammate-3.jpg"
+                alt="Маркетолог"
+                width="270"
+                height="260"
+              />
               <div class="team-footer">
                 <h3 class="section-title">Николай Тарасов</h3>
                 <p class="section-content">Marketing</p>
               </div>
             </li>
             <li class="team-item">
-              <div class="card-thumb">
-                <img
-                  src="./img/teammate-4.jpg"
-                  alt="Дизайнер интерфейса"
-                  width="270"
-                  height="260"
-                />
-              </div>
+              <img
+                src="./img/teammate-4.jpg"
+                alt="Дизайнер интерфейса"
+                width="270"
+                height="260"
+              />
               <div class="team-footer">
                 <h3 class="section-title">Михаил Ермаков</h3>
                 <p class="section-content">UI Designer</p>
@@ -209,15 +196,15 @@
     </main>
 
     <!--footer-->
-    <footer class="page-footer container">
+    <footer class="page-footer">
       <!--logo-footer-->
       <div class="footer container">
         <a href="" class="brandname" lang="en"
           ><span class="brandname-one">Web</span
           ><span class="brandname-two">Studio</span></a
         >
-        <address>
-          <ul class="footer-address list">
+        <address class="address">
+          <ul>
             <li class="footer-item">
               <a
                 href="https://goo.gl/maps/2GUoueHVRLLiKJBr9"
