Додавно списки для соц мереж в картках команди

--- a/index.html
+++ b/index.html
@@ -41,13 +41,23 @@
         <!--Contacts info-->
         <ul class="contacts">
           <li class="nav-item">
-            <a href="mailto:info@devstudio.com" class="contacts-nav"
-              >info@devstudio.com</a
+            <a href="mailto:info@devstudio.com" class="contacts-nav">
+              <svg class="contacts-icon contacts-nav" width="16" height="12">
+                <use href="./img/sprite.svg#icon-envelope"></use>
+              </svg>
+              info@devstudio.com</a
             >
           </li>
           <li class="nav-item">
             <a href="tel:+380961111111" class="contacts-nav"
-              >+38 096 111 11 11</a
+              ><svg
+                class="contacts-icon-phone contacts-nav"
+                width="10"
+                height="16"
+              >
+                <use href="./img/sprite.svg#icon-smartphone"></use>
+              </svg>
+              +38 096 111 11 11</a
             >
           </li>
         </ul>
@@ -74,6 +84,9 @@
           <h2 class="visually-hidden">Чем мы занимаемся</h2>
           <ul class="feature-list">
             <li class="feature-item">
+              <div class="feature">
+                <svg></svg>
+              </div>
               <h3 class="section-title">Внимание к деталям</h3>
               <p class="section-content">
                 Идейные соображения, а также начало повседневной работы по
@@ -81,6 +94,9 @@
               </p>
             </li>
             <li class="feature-item">
+              <div class="feature">
+                <svg></svg>
+              </div>
               <h3 class="section-title">Пунктуальность</h3>
               <p class="section-content">
                 Задача организации, в особенности же рамки и место обучения
@@ -88,6 +104,9 @@
               </p>
             </li>
             <li class="feature-item">
+              <div class="feature">
+                <svg></svg>
+              </div>
               <h3 class="section-title">Планирование</h3>
               <p class="section-content">
                 Равным образом консультация с широким активом в значительной
@@ -95,6 +114,9 @@
               </p>
             </li>
             <li class="feature-item">
+              <div class="feature">
+                <svg></svg>
+              </div>
               <h3 class="section-title">Современные технологии</h3>
               <p class="section-content">
                 Значимость этих проблем настолько очевидна, что реализация
@@ -152,6 +174,12 @@
               <div class="team-footer">
                 <h3 class="section-title">Игорь Демьяненко</h3>
                 <p class="section-content">Product Designer</p>
+                <ul>
+                  <li><a href=""></a></li>
+                  <li><a href=""></a></li>
+                  <li><a href=""></a></li>
+                  <li><a href=""></a></li>
+                </ul>
               </div>
             </li>
             <li class="team-item">
@@ -164,6 +192,12 @@
               <div class="team-footer">
                 <h3 class="section-title">Ольга Репина</h3>
                 <p class="section-content">Frontend Developer</p>
+                <ul>
+                  <li><a href=""></a></li>
+                  <li><a href=""></a></li>
+                  <li><a href=""></a></li>
+                  <li><a href=""></a></li>
+                </ul>
               </div>
             </li>
             <li class="team-item">
@@ -176,6 +210,12 @@
               <div class="team-footer">
                 <h3 class="section-title">Николай Тарасов</h3>
                 <p class="section-content">Marketing</p>
+                <ul>
+                  <li><a href=""></a></li>
+                  <li><a href=""></a></li>
+                  <li><a href=""></a></li>
+                  <li><a href=""></a></li>
+                </ul>
               </div>
             </li>
             <li class="team-item">
@@ -188,6 +228,12 @@
               <div class="team-footer">
                 <h3 class="section-title">Михаил Ермаков</h3>
                 <p class="section-content">UI Designer</p>
+                <ul>
+                  <li><a href=""></a></li>
+                  <li><a href=""></a></li>
+                  <li><a href=""></a></li>
+                  <li><a href=""></a></li>
+                </ul>
               </div>
             </li>
           </ul>
