--- a/icomoon/demo-external-svg.html
+++ b/icomoon/demo-external-svg.html
@@ -17,32 +17,37 @@
         <h1 class="mvm mtn fgc1">Grid Size: 0</h1>
         <div class="glyph fs1">
             <div class="clearfix pbs">
-                <svg class="icon icon-Client-1"><use xlink:href="symbol-defs.svg#icon-Client-1"></use></svg><span class="name"> icon-Client-1</span>
+                <svg class="icon icon-Twitter1"><use xlink:href="symbol-defs.svg#icon-Twitter1"></use></svg><span class="name"> icon-Twitter1</span>
             </div>
         </div>
         <div class="glyph fs1">
             <div class="clearfix pbs">
-                <svg class="icon icon-Client-2"><use xlink:href="symbol-defs.svg#icon-Client-2"></use></svg><span class="name"> icon-Client-2</span>
+                <svg class="icon icon-client"><use xlink:href="symbol-defs.svg#icon-client"></use></svg><span class="name"> icon-client</span>
             </div>
         </div>
         <div class="glyph fs1">
             <div class="clearfix pbs">
-                <svg class="icon icon-Client-3"><use xlink:href="symbol-defs.svg#icon-Client-3"></use></svg><span class="name"> icon-Client-3</span>
+                <svg class="icon icon-client6"><use xlink:href="symbol-defs.svg#icon-client6"></use></svg><span class="name"> icon-client6</span>
             </div>
         </div>
         <div class="glyph fs1">
             <div class="clearfix pbs">
-                <svg class="icon icon-Client-4"><use xlink:href="symbol-defs.svg#icon-Client-4"></use></svg><span class="name"> icon-Client-4</span>
+                <svg class="icon icon-client2"><use xlink:href="symbol-defs.svg#icon-client2"></use></svg><span class="name"> icon-client2</span>
             </div>
         </div>
         <div class="glyph fs1">
             <div class="clearfix pbs">
-                <svg class="icon icon-Client-5"><use xlink:href="symbol-defs.svg#icon-Client-5"></use></svg><span class="name"> icon-Client-5</span>
+                <svg class="icon icon-client3"><use xlink:href="symbol-defs.svg#icon-client3"></use></svg><span class="name"> icon-client3</span>
             </div>
         </div>
         <div class="glyph fs1">
             <div class="clearfix pbs">
-                <svg class="icon icon-Client-6"><use xlink:href="symbol-defs.svg#icon-Client-6"></use></svg><span class="name"> icon-Client-6</span>
+                <svg class="icon icon-client4"><use xlink:href="symbol-defs.svg#icon-client4"></use></svg><span class="name"> icon-client4</span>
+            </div>
+        </div>
+        <div class="glyph fs1">
+            <div class="clearfix pbs">
+                <svg class="icon icon-client5"><use xlink:href="symbol-defs.svg#icon-client5"></use></svg><span class="name"> icon-client5</span>
             </div>
         </div>
         <div class="glyph fs1">
@@ -67,7 +72,7 @@
         </div>
         <div class="glyph fs1">
             <div class="clearfix pbs">
-                <svg class="icon icon-facebook-1"><use xlink:href="symbol-defs.svg#icon-facebook-1"></use></svg><span class="name"> icon-facebook-1</span>
+                <svg class="icon icon-facebook1"><use xlink:href="symbol-defs.svg#icon-facebook1"></use></svg><span class="name"> icon-facebook1</span>
             </div>
         </div>
         <div class="glyph fs1">
@@ -77,17 +82,17 @@
         </div>
         <div class="glyph fs1">
             <div class="clearfix pbs">
-                <svg class="icon icon-instagram-1"><use xlink:href="symbol-defs.svg#icon-instagram-1"></use></svg><span class="name"> icon-instagram-1</span>
+                <svg class="icon icon-instagram1"><use xlink:href="symbol-defs.svg#icon-instagram1"></use></svg><span class="name"> icon-instagram1</span>
             </div>
         </div>
         <div class="glyph fs1">
             <div class="clearfix pbs">
-                <svg class="icon icon-instagram-2"><use xlink:href="symbol-defs.svg#icon-instagram-2"></use></svg><span class="name"> icon-instagram-2</span>
+                <svg class="icon icon-instagram2"><use xlink:href="symbol-defs.svg#icon-instagram2"></use></svg><span class="name"> icon-instagram2</span>
             </div>
         </div>
         <div class="glyph fs1">
             <div class="clearfix pbs">
-                <svg class="icon icon-linkedin-1"><use xlink:href="symbol-defs.svg#icon-linkedin-1"></use></svg><span class="name"> icon-linkedin-1</span>
+                <svg class="icon icon-linkedin1"><use xlink:href="symbol-defs.svg#icon-linkedin1"></use></svg><span class="name"> icon-linkedin1</span>
             </div>
         </div>
         <div class="glyph fs1">
