--- a/index.html
+++ b/index.html
@@ -174,11 +174,51 @@
               <div class="team-footer">
                 <h3 class="section-title">Игорь Демьяненко</h3>
                 <p class="section-content">Product Designer</p>
-                <ul>
-                  <li><a href=""></a></li>
-                  <li><a href=""></a></li>
-                  <li><a href=""></a></li>
-                  <li><a href=""></a></li>
+                <ul class="social-list">
+                  <li class="social-item">
+                    <a href="" class="team-social"
+                      ><svg class="social-icon">
+                        <use
+                          href="./img/sprite.svg#icon-instagram1"
+                          width="20"
+                          height="20"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-item">
+                    <a href="" class="team-social"
+                      ><svg>
+                        <use
+                          href="./img/sprite.svg#icon-Twitter1"
+                          width="20"
+                          height="16.25"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-item">
+                    <a href="" class="team-social"
+                      ><svg>
+                        <use
+                          href="./img/sprite.svg#icon-facebook1"
+                          width="20"
+                          height="40"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-item">
+                    <a href="" class="team-social"
+                      ><svg>
+                        <use
+                          href="./img/sprite.svg#icon-linkedin1"
+                          width="20"
+                          height="20"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
                 </ul>
               </div>
             </li>
@@ -192,11 +232,51 @@
               <div class="team-footer">
                 <h3 class="section-title">Ольга Репина</h3>
                 <p class="section-content">Frontend Developer</p>
-                <ul>
-                  <li><a href=""></a></li>
-                  <li><a href=""></a></li>
-                  <li><a href=""></a></li>
-                  <li><a href=""></a></li>
+                <ul class="social-list">
+                  <li class="social-item">
+                    <a href="" class="team-social"
+                      ><svg class="social-icon">
+                        <use
+                          href="./img/sprite.svg#icon-instagram1"
+                          width="20"
+                          height="20"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-item">
+                    <a href="" class="team-social"
+                      ><svg>
+                        <use
+                          href="./img/sprite.svg#icon-Twitter1"
+                          width="20"
+                          height="16.25"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-item">
+                    <a href="" class="team-social"
+                      ><svg>
+                        <use
+                          href="./img/sprite.svg#icon-facebook1"
+                          width="20"
+                          height="40"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-item">
+                    <a href="" class="team-social"
+                      ><svg>
+                        <use
+                          href="./img/sprite.svg#icon-linkedin1"
+                          width="20"
+                          height="20"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
                 </ul>
               </div>
             </li>
@@ -210,11 +290,52 @@
               <div class="team-footer">
                 <h3 class="section-title">Николай Тарасов</h3>
                 <p class="section-content">Marketing</p>
-                <ul>
-                  <li><a href=""></a></li>
-                  <li><a href=""></a></li>
-                  <li><a href=""></a></li>
-                  <li><a href=""></a></li>
+                <ul class="social-list">
+                  <li class="social-item">
+                    <a href="" class="team-social"
+                      ><svg class="social-icon">
+                        <use
+                          href="./img/sprite.svg#icon-instagram1"
+                          width="20"
+                          height="20"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-item">
+                    <a href="" class="team-social"
+                      ><svg>
+                        <use
+                          href="./img/sprite.svg#icon-Twitter1"
+                          width="20"
+                          height="16.25"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-item">
+                    <a href="" class="team-social"
+                      ><svg>
+                        <use
+                          href="./img/sprite.svg#icon-facebook1"
+                          width="20"
+                          height="40"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-item">
+                    <a href="" class="team-social"
+                      ><svg>
+                        <use
+                          href="./img/sprite.svg#icon-linkedin1"
+                          icon-linkedin1
+                          width="20"
+                          height="20"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
                 </ul>
               </div>
             </li>
@@ -228,11 +349,51 @@
               <div class="team-footer">
                 <h3 class="section-title">Михаил Ермаков</h3>
                 <p class="section-content">UI Designer</p>
-                <ul>
-                  <li><a href=""></a></li>
-                  <li><a href=""></a></li>
-                  <li><a href=""></a></li>
-                  <li><a href=""></a></li>
+                <ul class="social-list">
+                  <li class="social-item">
+                    <a href="" class="team-social"
+                      ><svg class="social-icon">
+                        <use
+                          href="./img/sprite.svg#icon-instagram1"
+                          width="20"
+                          height="20"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-item">
+                    <a href="" class="team-social"
+                      ><svg>
+                        <use
+                          href="./img/sprite.svg#icon-Twitter1"
+                          width="20"
+                          height="16.25"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-item">
+                    <a href="" class="team-social"
+                      ><svg>
+                        <use
+                          href="./img/sprite.svg#icon-facebook1"
+                          width="20"
+                          height="40"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-item">
+                    <a href="" class="team-social"
+                      ><svg>
+                        <use
+                          href="./img/sprite.svg#icon-linkedin1"
+                          width="20"
+                          height="20"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
                 </ul>
               </div>
             </li>
